# ft_linear_regression

./: Cargo.toml  README.md
output/: save.csv  save.txt
src/: lib.rs  main.rs
src/graphics/: render.rs
src/learn/: main.rs
src/learn/algo/: gradient.rs  mod.rs  ols.rs
src/learn/game/: game.rs
src/learn/graphics/: mod.rs  render.rs  setup.rs
src/learn/maths/: max_f64.rs  mod.rs
src/learn/output/: export.rs
src/learn/parsing/: args.rs  load_file.rs  mod.rs  parse.rs
src/parsing/: load_file.rs
src/predict/: main.rs
src/predict/parsing/: args.rs  parse.rs
