[package]
name = "ft_linear_regression"
version = "0.1.0"
authors = ["Simon Galasso <simon.galasso@hotmail.fr>"]
edition = "2018"

[[bin]]
name = "learn"
path = "src/learn/main.rs"

[[bin]]
name = "predict"
path = "src/predict/main.rs"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.0"
piston2d-opengl_graphics = "0.76.0"
find_folder = "0.3.0"
clap = "2.33.3"
